# wold

./: .gitmodules  CMakeLists.txt  Doxyfile  Doxyfile.in  README.md  copyright.txt  premake4.lua  readme.org  win-config  win_premake4.lua
models/: green-panda-model.egg.txt  panda-model.egg.txt
programs/: main.cl
shaders/: color.fs  color.vs  nolight.vs  uberlight.fs  uberlight.vs
src/: aabb_collider.cpp  aabb_collider.h  agent.cpp  agent.h  animation.cpp  animation.h  box_primitive.cpp  box_primitive.h  camera.cpp  camera.h  collider.cpp  collider.h  collision.cpp  collision.h  def.h  dev_document.org  egg_parser.cpp  egg_parser.h  floor_model.cpp  floor_model.h  free_view_camera.cpp  free_view_camera.h  gameobject.cpp  gameobject.h  gcc_shuffle.h  gl_program.cpp  gl_program.h  joint.cpp  joint.h  libmain.cpp  light.cpp  light.h  lookat_camera.cpp  lookat_camera.h  lua_demo.h  main.cpp  matrix.cpp  matrix.h  model.cpp  model.h  (+35 more)
